--- a/SelfStart/SelfStartFrontEnd/app/templates/components/rehab-plan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/rehab-plan.hbs
@@ -68,9 +68,13 @@
                   <td class={{column.class}}>
                     {{get exercise column.key}}
                   </td>
+
                   <td class="left aligned four wide column">
+                    <div class="cd-form">
                     {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
+                    </div>
                   </td>
+
                 {{/each}}
               </tr>
             {{/each}}
@@ -82,7 +86,9 @@
                     {{get exercise column.key}}
                   </td>
                   <td class="left aligned four wide column">
+                    <div class="cd-form">
                     {{ui-checkbox checked=(get exercise 'selected') onChange=(action (mut (get exercise 'selected')))}}
+                    </div>
                   </td>
                 {{/each}}
               </tr>
@@ -128,7 +134,7 @@
           {{input class="bookmark" type="text" value = planName placeholder="Name" required = true}}
         </div>
         <div class="field" style="margin: 1em 0;">
-          {{input class="message" type="text" value = description placeholder="Description" required = true}}
+          {{input class="message" type="text" value = description placeholder="Description"}}
         </div>
 
         <div class="field" style="margin-left: 495px;margin-top: -212px;position:  absolute;">
@@ -180,7 +186,9 @@
                   </td>
                 {{/each}}
                 <td class="left aligned two wide column">
-                  {{ui-checkbox checked=(get list 'selectedList') onChange=(action (mut (get list 'selectedList')))}}
+                  <div class="cd-form">
+                    {{ui-checkbox checked=(get list 'selectedList') onChange=(action (mut (get list 'selectedList')))}}
+                  </div>
                 </td>
                 <td class="left aligned two wide column">
                   <span class="handle" style="cursor: pointer">&varr;</span>
