--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -236,7 +236,7 @@
 
                 </div>
                 <div class="extra content footer" style="padding: 0 0 0 0;background-color: #2c3452;height: 55px;border-radius: 3px !important;">
-                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">SELECT</p>
+                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button}}</p>
                 </div>
               </div>
 
@@ -276,7 +276,7 @@
 
                 </div>
                 <div class="extra content footer" style="padding: 0 0 0 0;background-color: #2c3452;height: 55px;border-radius: 3px !important;">
-                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">SELECT</p>
+                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button-package-2}}</p>
                 </div>
               </div>
 
@@ -317,7 +317,7 @@
                 </div>
 
                 <div class="extra content footer" style="padding: 0 0 0 0;background-color: #e97d68;height: 55px;border-radius: 3px !important;">
-                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">SELECT</p>
+                  <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">{{payment-button-package-3}}</p>
                 </div>
               </div>
             </div>
