action steps and book appointment changes

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -54,7 +54,7 @@
         <div class="fourteen wide field">
           <div class="ui grid">
             <div class="fifteen wide column" {{action "addOption"}} style="margin: 1em 0;">
-              {{input id="disabled" class="circle" type="text" placeholder="Add Step"}}
+              {{input class="disabled circle" type="text" placeholder="Add Step"}}
             </div>
           </div>
         </div>
