Updated authorization and skype features

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -7,6 +7,8 @@
 <!--}-->
 <!--</style>-->
 
+{{#if show}}
+
 
 <div id="example" class="index">
 
@@ -45,3 +47,6 @@
 
   </div>
 </div>
+{{else}}
+<p>You do not have authorization to this route, please register.</p>
+{{/if}}
