--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
@@ -1,3 +1,4 @@
+{{#if show}}
 <div class="masthead segment bg3">
   <div class="ui container">
     <div class="introduction">
@@ -17,3 +18,4 @@
     </div>
   </div>
 </div>
+{{/if}}
