--- a/SelfStart/SelfStartFrontEnd/app/templates/components/user-info.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/user-info.hbs
@@ -71,6 +71,10 @@
             {{input class="phone" type="text" value = phoneNumber placeholder="Phone Number" }}
           </div>
 
+           <div class="field" style="margin: 1em 0;">
+            {{input class = "chat" type="text" value=skype placeholder="Skype Username" }}
+          </div>
+
           <div class="ui hidden divider"></div>
           <div class="ui hidden divider"></div>
 
