--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-upload-photos.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-upload-photos.hbs
@@ -1,14 +1,16 @@
 <br>
-
 <div id="content">
-  {{add-image}}'
+  {{add-image flagAdd=flagAdd disabled=disabled}}
 
+  <br><br><br>
+
+  <div class="ui container">
   <table class="ui single line table">
     <thead>
     <tr>
-      <th>Image Name</th>
-      <th>Image</th>
-      <th>Delete</th>
+      <th class="seven wide">Image Name</th>
+      <th class="seven wide">Image</th>
+      <th class="two wide">Actions</th>
     </tr>
     </thead>
 
@@ -20,17 +22,13 @@
           <img class = "ui small image" src="{{Image.imageData}}">
         </td>
         <td>
-          <div class="four wide column right aligned">
-            {{delete-image ID=Image.id}}
-          </div>
+          {{delete-image ID=Image.id flagDelete=flagDelete}}
         </td>
       </tr>
     {{/each}}
     </tbody>
-
   </table>
-
+    <br><br><br>
+  </div>
 </div>
-
-{{outlet}}
 
