--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-image.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-image.hbs
@@ -1,26 +1,20 @@
-<button class = "ui icon red basic button" {{action 'openModal'}} title="Delete">
-  {{!-- <i class=" remove icon"> </i> --}}
-  Delete
-</button>
+<p style="cursor: pointer;" {{action 'openModal' }}
+   title="Delete">
+  <img src="/assets/images/trash-simple.svg">
+</p>
 
-{{#ui-modal name=modalName class=modalName}}
-  <div >
-    <i class=" warning sign icon"></i>
-    Please Confirm
+{{#ui-modal name= modalName class=modalName }}
+  <div class="ui icon header">
+    Please Confirm ...
   </div>
   <div class="content">
-    <p>Are you sure you want to delete this Image?</p>
+    <p>Are you sure you need to delete this element?</p>
   </div>
   <br>
-  <div class="actions">
-    <div class="ui red cancel inverted button">
-      {{!-- <i class = "remove icon"></i> --}}
-      No
-    </div>
-    <div class="ui green ok inverted button">
-      {{!-- <i class="checkmark icon"></i> --}}
-      Yes
-    </div>
-    <br><br>
+
+  <div class="actions" style="padding:0">
+
+    <div class="ok " style="padding:.6em; float:left; width: 50%; cursor: pointer; background: #fc7169; color:white; text-align: center;">Yes</div>
+    <div class="cancel " style="padding:.6em; float:left; width: 50%;  cursor: pointer; background: #b6bece; color:white; text-align: center;">No</div>
   </div>
 {{/ui-modal}}
