Transaction history completed and Skype fixed on all pages

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
@@ -377,7 +377,7 @@
 
       <label class="header">Payment history:</label>
       {{#each model.transactions as |transaction|}}
-        <label>Package #{{transaction.package}}, Date: {{transaction.date}}, Price: ${{transaction.amount}}</label>
+        <label>{{transaction.package}}, Date: {{transaction.date}}, Price: ${{transaction.amount}}</label>
       {{/each}}
 
       <br><br><br>
